--- a/public/styl-back/parts/inputs-material.styl
+++ b/public/styl-back/parts/inputs-material.styl
@@ -1,5 +1,6 @@
 .group
   position relative
+  margin-top 20px
   input
     font-size 1rem
     padding 10px 0px
@@ -21,7 +22,7 @@
     left 0px
     top 10px
     transition 0.2s ease all
-  input:focus ~ label, input:valid ~ label
+  input:focus ~ label
     top -10px
     font-size 14px
     color #5264AE
