--- a/public/styl-back/parts/modulos.styl
+++ b/public/styl-back/parts/modulos.styl
@@ -1,3 +1,13 @@
+.contenedor-secundario
+	width 90%
+	margin 0 auto
+	form 
+		width 90%
+		margin 0 auto
+		margin-top 50px
+		padding-bottom 40px
+		#cke_ckeditor
+			margin-top 20px
 .modulo-largo
 	width 100%
 	margin 0px auto
@@ -27,6 +37,16 @@
 		width 90%
 		max-width 900px
 		margin 0 auto
+	.contenedor-crear-nota
+		position absolute
+		width 900px !important
+		left 60%
+		margin-left -450px
+		form
+			.group 
+				width 100%
+				margin 0
+				margin-top 20px
 	.div-izquierdo
 		width 60%
 		display inline-block
