--- a/public/styl-back/parts/create-article.styl
+++ b/public/styl-back/parts/create-article.styl
@@ -67,12 +67,16 @@
 	height 100%
 	margin 0px auto !important
 	position relative
+	display block
 	.subir-foto-articulo
 		width 100%
 		height 240px
 		position relative
 		padding 10px 0
 		border 2px dashed rgba(0,0,0,.2)
+		input
+			width 100%
+			height 100%
 		form, .cif-file-container, .cif-parent, .cif-img
 			height 100% !important
 		.cif-file-row
