--- a/public/styl-back/parts/header.styl
+++ b/public/styl-back/parts/header.styl
@@ -29,7 +29,7 @@ header
 			width 60%
 			margin-left 5%
 			background url("../img/logo-cgq.png") no-repeat
-			background-size auto 100% !important
+			background-size auto 100% 
 .inicio-sesion
 	width 50%
 	display inline-block
@@ -75,6 +75,8 @@ header
 				margin-left 10%
 				margin-top 14px
 				background url("../img/logo-cgq.png") no-repeat
+				background-size 100% auto 
+				background-position 50%
 		.inicio-sesion
 			width 80%
 		.contenedor-inicio-sesion
