--- a/public/styl-front/parts/nota.styl
+++ b/public/styl-front/parts/nota.styl
@@ -9,6 +9,18 @@
 		width 100%
 		padding-top 20px
 		margin-bottom 50px
+		.contenedor-video
+			height 0
+			overflow hidden
+			padding-top 30px
+			padding-bottom 52.45%
+			position relative
+			iframe 
+				height 100%
+				left 0
+				position absolute
+				top 0 
+				width 100%
 		figure 
 			width 100%
 			border-top 3px solid verde-clarito
